big icons for timeline

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link href="./common.css" rel="stylesheet" />
     <link href="./index.css" rel="stylesheet" />
     <link href="./leaves.css" rel="stylesheet" />
+    <link href="./timeline.css" rel="stylesheet" />
     <script src="./common.js"></script>
 </head>
 
@@ -357,50 +358,93 @@
             <h2 class="timeline-header">Wedding Weekend Schedule</h2>
             <div class="timeline-elegant">
                 <div class="timeline-event left">
-                    <div class="time">Wednesday</div>
-                    <div class="info">👨‍👩‍👧‍👦 Family arrives and settles in<br><small>If you're in town early, we'd
-                            love to see you — but Wednesday is for family.</small></div>
+                    <div class="icon">👨‍👩‍👧‍👦</div>
+                    <div class="content">
+                        <div class="time">Wednesday</div>
+                        <div class="info">Family arrives and settles in<br><small>If you're in town early, we'd love to
+                                see you — but Wednesday is for family.</small></div>
+                    </div>
                 </div>
+
                 <div class="timeline-event right">
-                    <div class="time">Thursday (Sunset)</div>
-                    <div class="info">🍹 Icebreaker at the hotel: drinks, canapés, mingling</div>
+                    <div class="icon">🍹</div>
+                    <div class="content">
+                        <div class="time">Thursday (Sunset)</div>
+                        <div class="info">Icebreaker at the hotel: drinks, canapés, and mingling</div>
+                    </div>
                 </div>
+
                 <div class="timeline-event left">
-                    <div class="time">Friday</div>
-                    <div class="info">🧘‍♀️ Free day to relax and explore<br><small>Don’t go too hard — Saturday is the
-                            main event!</small></div>
+                    <div class="icon">🧘‍♀️</div>
+                    <div class="content">
+                        <div class="time">Friday</div>
+                        <div class="info">Free day to relax and explore<br><small>Don’t go too hard — Saturday is the
+                                main event!</small></div>
+                    </div>
                 </div>
+
                 <div class="timeline-event right">
-                    <div class="time">5:00 PM Saturday</div>
-                    <div class="info">🚐 Shuttles depart from Emporio</div>
+                    <div class="icon">🚐</div>
+                    <div class="content">
+                        <div class="time">5:00 PM Saturday</div>
+                        <div class="info">Shuttles depart from Emporio</div>
+                    </div>
                 </div>
+
                 <div class="timeline-event left">
-                    <div class="time">6:00 PM</div>
-                    <div class="info">💍 Wedding Ceremony</div>
+                    <div class="icon">💍</div>
+                    <div class="content">
+                        <div class="time">6:00 PM</div>
+                        <div class="info">Wedding Ceremony</div>
+                    </div>
                 </div>
+
                 <div class="timeline-event right">
-                    <div class="time">7:00 PM</div>
-                    <div class="info">🍸 Cocktail Hour</div>
+                    <div class="icon">🍸</div>
+                    <div class="content">
+                        <div class="time">7:00 PM</div>
+                        <div class="info">Cocktail Hour</div>
+                    </div>
                 </div>
+
                 <div class="timeline-event left">
-                    <div class="time">8:00 PM</div>
-                    <div class="info">🍽️ Dinner with 🎷 live saxophone</div>
+                    <div class="icon">🎷</div>
+                    <div class="content">
+                        <div class="time">8:00 PM</div>
+                        <div class="info">Dinner with live saxophone</div>
+                    </div>
                 </div>
+
                 <div class="timeline-event right">
-                    <div class="time">10:00 PM</div>
-                    <div class="info">💃 DJ and Dancing</div>
+                    <div class="icon">💃</div>
+                    <div class="content">
+                        <div class="time">10:00 PM</div>
+                        <div class="info">DJ and Dancing</div>
+                    </div>
                 </div>
+
                 <div class="timeline-event left">
-                    <div class="time">11:30 PM</div>
-                    <div class="info">🚌 First shuttle returns to hotel</div>
+                    <div class="icon">🚌</div>
+                    <div class="content">
+                        <div class="time">11:30 PM</div>
+                        <div class="info">First shuttle returns to hotel</div>
+                    </div>
                 </div>
+
                 <div class="timeline-event right">
-                    <div class="time">1:00 AM</div>
-                    <div class="info">🎺 Mariachis + 🌮 tacos</div>
+                    <div class="icon">🌮</div>
+                    <div class="content">
+                        <div class="time">1:00 AM</div>
+                        <div class="info">Mariachis + tacos</div>
+                    </div>
                 </div>
+
                 <div class="timeline-event left">
-                    <div class="time">2:00 AM</div>
-                    <div class="info">🚌 Last shuttle to hotel</div>
+                    <div class="icon">🚌</div>
+                    <div class="content">
+                        <div class="time">2:00 AM</div>
+                        <div class="info">Last shuttle to hotel</div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -410,60 +454,93 @@
             <h2 class="timeline-header">Programa del Fin de Semana</h2>
             <div class="timeline-elegant">
                 <div class="timeline-event left">
-                    <div class="time">Miércoles</div>
-                    <div class="info">👨‍👩‍👧‍👦 La familia llega y se instala<br><small>Si ya estás en Cancún, ¡nos
-                            encantaría verte! Pero este día es exclusivo para la familia.</small></div>
+                    <div class="icon">👨‍👩‍👧‍👦</div>
+                    <div class="content">
+                        <div class="time">Miércoles</div>
+                        <div class="info">La familia llega y se instala<br><small>Si ya estás en Cancún, ¡nos encantaría
+                                verte! Pero este día es exclusivo para la familia.</small></div>
+                    </div>
                 </div>
 
                 <div class="timeline-event right">
-                    <div class="time">Jueves (al atardecer)</div>
-                    <div class="info">🍹 Evento rompehielo en el hotel: bebidas, canapés y convivencia</div>
+                    <div class="icon">🍹</div>
+                    <div class="content">
+                        <div class="time">Jueves (al atardecer)</div>
+                        <div class="info">Evento rompehielo en el hotel: bebidas, canapés y convivencia</div>
+                    </div>
                 </div>
 
                 <div class="timeline-event left">
-                    <div class="time">Viernes</div>
-                    <div class="info">🧘‍♀️ Día libre para descansar o explorar<br><small>¡Pero no se excedan! El sábado
-                            se baila fuerte.</small></div>
+                    <div class="icon">🧘‍♀️</div>
+                    <div class="content">
+                        <div class="time">Viernes</div>
+                        <div class="info">Día libre para descansar o explorar<br><small>¡Pero no se excedan! El sábado
+                                se baila fuerte.</small></div>
+                    </div>
                 </div>
 
                 <div class="timeline-event right">
-                    <div class="time">Sábado, 5:00 PM</div>
-                    <div class="info">🚐 El transporte saldrá desde el Emporio</div>
+                    <div class="icon">🚐</div>
+                    <div class="content">
+                        <div class="time">Sábado, 5:00 PM</div>
+                        <div class="info">El transporte saldrá desde el Emporio</div>
+                    </div>
                 </div>
 
                 <div class="timeline-event left">
-                    <div class="time">6:00 PM</div>
-                    <div class="info">💍 Comienza la ceremonia</div>
+                    <div class="icon">💍</div>
+                    <div class="content">
+                        <div class="time">6:00 PM</div>
+                        <div class="info">Comienza la ceremonia</div>
+                    </div>
                 </div>
 
                 <div class="timeline-event right">
-                    <div class="time">7:00 PM</div>
-                    <div class="info">🍸 Hora del cóctel</div>
+                    <div class="icon">🍸</div>
+                    <div class="content">
+                        <div class="time">7:00 PM</div>
+                        <div class="info">Hora del cóctel</div>
+                    </div>
                 </div>
 
                 <div class="timeline-event left">
-                    <div class="time">8:00 PM</div>
-                    <div class="info">🍽️ Cena con música de 🎷 saxofón en vivo</div>
+                    <div class="icon">🎷</div>
+                    <div class="content">
+                        <div class="time">8:00 PM</div>
+                        <div class="info">Cena con saxofón en vivo</div>
+                    </div>
                 </div>
 
                 <div class="timeline-event right">
-                    <div class="time">10:00 PM</div>
-                    <div class="info">💃 Baile con DJ</div>
+                    <div class="icon">💃</div>
+                    <div class="content">
+                        <div class="time">10:00 PM</div>
+                        <div class="info">Baile con DJ</div>
+                    </div>
                 </div>
 
                 <div class="timeline-event left">
-                    <div class="time">11:30 PM</div>
-                    <div class="info">🚌 Primer transporte de regreso al hotel</div>
+                    <div class="icon">🚌</div>
+                    <div class="content">
+                        <div class="time">11:30 PM</div>
+                        <div class="info">Primer transporte de regreso al hotel</div>
+                    </div>
                 </div>
 
                 <div class="timeline-event right">
-                    <div class="time">1:00 AM</div>
-                    <div class="info">🎺 Mariachis y 🌮 tacos para cerrar la noche</div>
+                    <div class="icon">🌮</div>
+                    <div class="content">
+                        <div class="time">1:00 AM</div>
+                        <div class="info">Mariachis y tacos</div>
+                    </div>
                 </div>
 
                 <div class="timeline-event left">
-                    <div class="time">2:00 AM</div>
-                    <div class="info">🚌 Último transporte al hotel</div>
+                    <div class="icon">🚌</div>
+                    <div class="content">
+                        <div class="time">2:00 AM</div>
+                        <div class="info">Último transporte al hotel</div>
+                    </div>
                 </div>
             </div>
         </div>
