smarter implementation for alternating elements in timeline (I'm feeling smart today!)

--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
         <div class="lang-en">
             <h2 class="timeline-header">Wedding Weekend Schedule</h2>
             <div class="timeline-elegant">
-                <div class="timeline-event left">
+                <div class="timeline-event">
                     <div class="icon">👨‍👩‍👧‍👦</div>
                     <div class="content">
                         <div class="time">Wednesday</div>
@@ -366,7 +366,7 @@
                     </div>
                 </div>
 
-                <div class="timeline-event right">
+                <div class="timeline-event">
                     <div class="icon">🍹</div>
                     <div class="content">
                         <div class="time">Thursday (Sunset)</div>
@@ -374,7 +374,7 @@
                     </div>
                 </div>
 
-                <div class="timeline-event left">
+                <div class="timeline-event">
                     <div class="icon">🧘‍♀️</div>
                     <div class="content">
                         <div class="time">Friday</div>
@@ -383,7 +383,7 @@
                     </div>
                 </div>
 
-                <div class="timeline-event right">
+                <div class="timeline-event">
                     <div class="icon">🚐</div>
                     <div class="content">
                         <div class="time">5:00 PM Saturday</div>
@@ -391,7 +391,7 @@
                     </div>
                 </div>
 
-                <div class="timeline-event left">
+                <div class="timeline-event">
                     <div class="icon">💍</div>
                     <div class="content">
                         <div class="time">6:00 PM</div>
@@ -399,7 +399,7 @@
                     </div>
                 </div>
 
-                <div class="timeline-event right">
+                <div class="timeline-event">
                     <div class="icon">🍸</div>
                     <div class="content">
                         <div class="time">7:00 PM</div>
@@ -407,7 +407,7 @@
                     </div>
                 </div>
 
-                <div class="timeline-event left">
+                <div class="timeline-event">
                     <div class="icon">🎷</div>
                     <div class="content">
                         <div class="time">8:00 PM</div>
@@ -415,7 +415,7 @@
                     </div>
                 </div>
 
-                <div class="timeline-event right">
+                <div class="timeline-event">
                     <div class="icon">💃</div>
                     <div class="content">
                         <div class="time">10:00 PM</div>
@@ -423,7 +423,7 @@
                     </div>
                 </div>
 
-                <div class="timeline-event left">
+                <div class="timeline-event">
                     <div class="icon">🚌</div>
                     <div class="content">
                         <div class="time">11:30 PM</div>
@@ -431,7 +431,7 @@
                     </div>
                 </div>
 
-                <div class="timeline-event right">
+                <div class="timeline-event">
                     <div class="icon">🌮</div>
                     <div class="content">
                         <div class="time">1:00 AM</div>
@@ -439,7 +439,7 @@
                     </div>
                 </div>
 
-                <div class="timeline-event left">
+                <div class="timeline-event">
                     <div class="icon">🚌</div>
                     <div class="content">
                         <div class="time">2:00 AM</div>
@@ -453,7 +453,7 @@
         <div class="lang-es hidden">
             <h2 class="timeline-header">Programa del Fin de Semana</h2>
             <div class="timeline-elegant">
-                <div class="timeline-event left">
+                <div class="timeline-event">
                     <div class="icon">👨‍👩‍👧‍👦</div>
                     <div class="content">
                         <div class="time">Miércoles</div>
@@ -462,7 +462,7 @@
                     </div>
                 </div>
 
-                <div class="timeline-event right">
+                <div class="timeline-event">
                     <div class="icon">🍹</div>
                     <div class="content">
                         <div class="time">Jueves (al atardecer)</div>
@@ -470,7 +470,7 @@
                     </div>
                 </div>
 
-                <div class="timeline-event left">
+                <div class="timeline-event">
                     <div class="icon">🧘‍♀️</div>
                     <div class="content">
                         <div class="time">Viernes</div>
@@ -479,7 +479,7 @@
                     </div>
                 </div>
 
-                <div class="timeline-event right">
+                <div class="timeline-event">
                     <div class="icon">🚐</div>
                     <div class="content">
                         <div class="time">Sábado, 5:00 PM</div>
@@ -487,7 +487,7 @@
                     </div>
                 </div>
 
-                <div class="timeline-event left">
+                <div class="timeline-event">
                     <div class="icon">💍</div>
                     <div class="content">
                         <div class="time">6:00 PM</div>
@@ -495,7 +495,7 @@
                     </div>
                 </div>
 
-                <div class="timeline-event right">
+                <div class="timeline-event">
                     <div class="icon">🍸</div>
                     <div class="content">
                         <div class="time">7:00 PM</div>
@@ -503,7 +503,7 @@
                     </div>
                 </div>
 
-                <div class="timeline-event left">
+                <div class="timeline-event">
                     <div class="icon">🎷</div>
                     <div class="content">
                         <div class="time">8:00 PM</div>
@@ -511,7 +511,7 @@
                     </div>
                 </div>
 
-                <div class="timeline-event right">
+                <div class="timeline-event">
                     <div class="icon">💃</div>
                     <div class="content">
                         <div class="time">10:00 PM</div>
@@ -519,7 +519,7 @@
                     </div>
                 </div>
 
-                <div class="timeline-event left">
+                <div class="timeline-event">
                     <div class="icon">🚌</div>
                     <div class="content">
                         <div class="time">11:30 PM</div>
@@ -527,7 +527,7 @@
                     </div>
                 </div>
 
-                <div class="timeline-event right">
+                <div class="timeline-event">
                     <div class="icon">🌮</div>
                     <div class="content">
                         <div class="time">1:00 AM</div>
@@ -535,7 +535,7 @@
                     </div>
                 </div>
 
-                <div class="timeline-event left">
+                <div class="timeline-event">
                     <div class="icon">🚌</div>
                     <div class="content">
                         <div class="time">2:00 AM</div>
