fix balance of pairs

--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                         width="600" height="450" style="border:0; min-height: max-content;" allowfullscreen=""
                         loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
-                <div class="pair-right">
+                <div class="pair-right text-backdrop" style="background-color: white;">
                     <div class="lang-en">
                         <h3>Guest Accommodations</h3>
                         <p><strong>Emporio Cancún</strong><br />
