--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
             </div>
         </div>
         <div class="hotel-info">
-            <div class="pair">
+            <div class="pair" style="flex-wrap:wrap-reverse;">
                 <div class="pair-left">
                     <iframe
                         src="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d59593.416815009645!2d-86.86401840455598!3d21.00912401918747!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e0!4m5!1s0x8f4c282dfa86787b%3A0x35bbe28e95d56333!2sHotel%20Emporio%20Canc%C3%BAn%20optional%20All-Inclusive%2C%20Blvd.%20Kukulc%C3%A1n%2C%20Retorno%20Gucumatz%20Km%2017%2C%20Segunda%20Etapa%2C%20Zona%20Hotelera%2C%2077500%20Canc%C3%BAn%2C%20Q.R.%2C%20Mexico!3m2!1d21.0731978!2d-86.77652979999999!4m5!1s0x8f4e86bdd8a05967%3A0x194721cc2728ea1b!2sJard%C3%ADn%20del%20Mar%2C%20Quintana%20Roo%2C%20Mexico!3m2!1d20.9469776!2d-86.8372895!5e0!3m2!1sen!2sca!4v1746496572187!5m2!1sen!2sca"
