use new invitation for rsvp page TODO: spanish version and finalize

--- a/rsvp.html
+++ b/rsvp.html
@@ -40,7 +40,7 @@
                         Durand</div>
                 </div> -->
                 <img src="./assets/digital-rsvp-es.png" class="lang-es hidden" />
-                <img src="./assets/digital-rsvp-en.png" class="lang-en" />
+                <img src="./assets/invitation/invitation_en_preview.png" class="lang-en" />
             </a>
 
         </div>
