--- a/rsvp.html
+++ b/rsvp.html
@@ -24,7 +24,8 @@
                 </div>
             </div>
             <div class="external-seal">
-                <object type="image/svg+xml" width="100%" data="./assets/wax-seal.svg" class="wax-seal"></object>
+                <!-- <object type="image/svg+xml" width="100%" data="./assets/wax-seal.svg" class="wax-seal"></object> -->
+                <img src="./assets/b+l-gold-seal.png" />
             </div>
             <div class="glitter"></div>
             <a href="/" class="invitation" id="site-link" target="_blank">
