include spanish invite and round corners with css

--- a/rsvp.html
+++ b/rsvp.html
@@ -40,8 +40,8 @@
                         M.
                         Durand</div>
                 </div> -->
-                <img src="./assets/digital-rsvp-es.png" class="lang-es hidden" />
-                <img src="./assets/invitation/invitation_en_preview.png" class="lang-en" />
+                <img src="./assets/invitation/invitation_es.png" class="lang-es hidden" />
+                <img src="./assets/invitation/invitation_en.png" class="lang-en" />
             </a>
 
         </div>
