add shower invite and green texture on envelope

--- a/rsvp.html
+++ b/rsvp.html
@@ -40,8 +40,8 @@
                         M.
                         Durand</div>
                 </div> -->
-                <img src="./assets/invitation/invitation_es.png" class="lang-es hidden" />
-                <img src="./assets/invitation/invitation_en.png" class="lang-en" />
+                <img src="./assets/invitation/invitation_es.png" class="lang-es hidden round-top" />
+                <img src="./assets/invitation/invitation_en.png" class="lang-en round-top" />
             </a>
 
         </div>
