--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
     <link href="./index.css" rel="stylesheet" />
     <link href="./leaves.css" rel="stylesheet" />
     <link href="./timeline.css" rel="stylesheet" />
+    <link href="./photos.css" rel="stylesheet" />
     <script src="./common.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css" />
 </head>
 
 <body>
@@ -145,7 +148,25 @@
                 </div>
             </div>
         </div>
+        <div class="photos">
+            <a href="./assets/photos/embracing-sunglasses.jpg" data-fancybox="gallery" data-caption="Single image">
+                <img src="./assets/photos/embracing-sunglasses.jpg" />
+            </a>
+            <a href="./assets/photos/kissing-bw.jpg" data-fancybox="gallery" data-caption="Single image">
+                <img src="./assets/photos/kissing-bw.jpg" />
+            </a>
+            <a href="./assets/photos/lets-go-bw.jpg" data-fancybox="gallery" data-caption="Single image">
+                <img src="./assets/photos/lets-go-bw.jpg" />
+            </a>
+            <a href="./assets/photos/smiling-bridge-ring.jpg" data-fancybox="gallery" data-caption="Single image">
+                <img src="./assets/photos/smiling-bridge-ring.jpg" />
+            </a>
 
+            <script>Fancybox.bind("[data-fancybox]", {
+                    // Your custom options
+                });
+            </script>
+        </div>
     </section>
 
     <div class="leaf-divider"></div>
