add horizontal rule to divide photos from about us

--- a/index.html
+++ b/index.html
@@ -148,17 +148,20 @@
                 </div>
             </div>
         </div>
+        <div class="hr"></div>
         <div class="photos">
-            <a href="./assets/photos/embracing-sunglasses.jpg" data-fancybox="gallery" data-caption="Single image">
+            <a href="./assets/photos/embracing-sunglasses.jpg" data-fancybox="gallery" data-caption="📷 Isaac">
                 <img src="./assets/photos/embracing-sunglasses.jpg" />
             </a>
-            <a href="./assets/photos/kissing-bw.jpg" data-fancybox="gallery" data-caption="Single image">
+            <a href="./assets/photos/kissing-bw.jpg" data-fancybox="gallery"
+                data-caption="What is he doing with his hands?? 📷 Isaac">
                 <img src="./assets/photos/kissing-bw.jpg" />
             </a>
-            <a href="./assets/photos/lets-go-bw.jpg" data-fancybox="gallery" data-caption="Single image">
+            <a href="./assets/photos/lets-go-bw.jpg" data-fancybox="gallery" data-caption="Come with me!! 📷 Isaac">
                 <img src="./assets/photos/lets-go-bw.jpg" />
             </a>
-            <a href="./assets/photos/smiling-bridge-ring.jpg" data-fancybox="gallery" data-caption="Single image">
+            <a href="./assets/photos/smiling-bridge-ring.jpg" data-fancybox="gallery"
+                data-caption="Taking a break to be happy 📷 Isaac">
                 <img src="./assets/photos/smiling-bridge-ring.jpg" />
             </a>
 
