moregallery photos and it is a single line on desktops

--- a/index.html
+++ b/index.html
@@ -160,6 +160,13 @@
             <a href="./assets/photos/lets-go-bw.jpg" data-fancybox="gallery" data-caption="Come with me!! 📷 Isaac">
                 <img src="./assets/photos/lets-go-bw.jpg" />
             </a>
+            <a href="./assets/photos/butts.JPG" data-fancybox="gallery" data-caption="Butts!! 📷 Isaac">
+                <img src="./assets/photos/butts.JPG" />
+            </a>
+            <a href="./assets/photos/in-the-window.JPG" data-fancybox="gallery"
+                data-caption="We found a nice window 📷 Isaac">
+                <img src="./assets/photos/in-the-window.JPG" />
+            </a>
             <a href="./assets/photos/smiling-bridge-ring.jpg" data-fancybox="gallery"
                 data-caption="Taking a break to be happy 📷 Isaac">
                 <img src="./assets/photos/smiling-bridge-ring.jpg" />
