add link to google photos album

--- a/index.html
+++ b/index.html
@@ -171,7 +171,10 @@
                 data-caption="Taking a break to be happy 📷 Isaac">
                 <img src="./assets/photos/smiling-bridge-ring.jpg" />
             </a>
-
+            <a href="https://photos.app.goo.gl/HhcwBdpmeCpjQpxE9" style="justify-self: center;
+    align-self: center;">
+                <img src="./assets/photos/google-photos-icon.webp" style="width:60%;" />
+            </a>
             <script>Fancybox.bind("[data-fancybox]", {
                     // Your custom options
                 });
