update details with travel details

--- a/index.html
+++ b/index.html
@@ -304,18 +304,29 @@
             <h4>Getting to Emporio Cancún</h4>
             <div class="transport-options">
                 <div class="transport-card">
+                    <h4><i class="fas fa-plane"></i> Flights</h4>
+                    <p>Find your way to Cancún Airport (CUN). If you're coming from Toronto or Veracruz
+                        we are working with a travel agent to schedule group flights. Anyone travelling in these groups
+                        will also have shuttles scheduled to bring you right to the hotel.
+                    </p>
+                </div>
+                <div class="transport-card">
                     <h4><i class="fas fa-taxi"></i> Taxi</h4>
-                    <p>Official airport taxis cost approximately $50 USD for up to 4 passengers. Travel time:
-                        ~30
+                    <p>Official airport taxis cost approximately $40 USD for up to 4 passengers. Travel time:
+                        ~20
                         minutes.</p>
                 </div>
                 <div class="transport-card">
                     <h4><i class="fas fa-shuttle-van"></i> Hotel Shuttle</h4>
-                    <p>Emporio offers private transfers for $65 USD each way (reserve in advance).</p>
+                    <p>Shuttles to Emporio are available for groups of up to 15. It's ~30-65 USD each way (make sure to
+                        reserve in
+                        advance!) -- <a
+                            href="https://etransfers.com/transportation-to-hotel-emporio-cancun">eTransfers</a>
+                    </p>
                 </div>
                 <div class="transport-card">
                     <h4><i class="fas fa-car"></i> Rental Car</h4>
-                    <p>Major rental agencies available at airport. Parking available at hotel for $15 USD/day.
+                    <p>Major rental agencies available at airport. Parking available at hotel.
                     </p>
                 </div>
             </div>
@@ -324,19 +335,10 @@
                 <h4>Alternative Accommodations Nearby:</h4>
                 <div class="hotel-list">
                     <div class="hotel-card">
-                        <h5>Hyatt Ziva Cancún</h5>
-                        <div class="hotel-distance">0.3 miles from venue</div>
-                        <p>All-inclusive luxury resort</p>
-                    </div>
-                    <div class="hotel-card">
-                        <h5>Marriott Cancún Resort</h5>
-                        <div class="hotel-distance">0.5 miles from venue</div>
-                        <p>Beachfront with spa facilities</p>
-                    </div>
-                    <div class="hotel-card">
-                        <h5>Airbnb Options</h5>
+                        <h5>Airbnb/Vrbo</h5>
                         <div class="hotel-distance">Various locations</div>
-                        <p>Many condos available in Hotel Zone</p>
+                        <p>Many condos available in Hotel Zone -- let us know if you're not planning to stay with us!
+                        </p>
                     </div>
                 </div>
             </div>
@@ -345,20 +347,31 @@
             <h4>Cómo llegar a Emporio Cancún</h4>
             <div class="transport-options">
                 <div class="transport-card">
-                    <h4><i class="fas fa-taxi"></i> Taxi</h4>
-                    <p>Los taxis oficiales del aeropuerto cuestan aproximadamente $50 USD por hasta 4 personas.
-                        Tiempo estimado: 30 minutos.</p>
+                    <h4><i class="fas fa-plane"></i> Vuelos</h4>
+                    <p>Llega al Aeropuerto de Cancún (CUN). Si viajas desde Toronto o Veracruz, estamos trabajando
+                        con una agencia de viajes para coordinar vuelos en grupo. Las personas que viajen en estos
+                        grupos
+                        también tendrán transporte programado para llevarlos directamente al hotel.
+                    </p>
                 </div>
                 <div class="transport-card">
-                    <h4><i class="fas fa-shuttle-van"></i> Transporte del Hotel</h4>
-                    <p>Emporio ofrece traslados privados por $65 USD por trayecto (reserva previa requerida).
+                    <h4><i class="fas fa-taxi"></i> Taxi</h4>
+                    <p>Los taxis oficiales del aeropuerto cuestan aproximadamente $40 USD para hasta 4 personas.
+                        Tiempo de viaje: ~20 minutos.</p>
+                </div>
+                <div class="transport-card">
+                    <h4><i class="fas fa-shuttle-van"></i> Transporte al Hotel</h4>
+                    <p>Hay transportes disponibles al Hotel Emporio para grupos de hasta 15 personas.
+                        El costo es de aproximadamente 30 a 65 USD por trayecto (¡asegúrate de reservar con
+                        anticipación!)
+                        -- <a href="https://etransfers.com/transportation-to-hotel-emporio-cancun">eTransfers</a>
                     </p>
                 </div>
                 <div class="transport-card">
                     <h4><i class="fas fa-car"></i> Renta de Auto</h4>
-                    <p>Agencias de renta disponibles en el aeropuerto. El hotel cuenta con estacionamiento por
-                        $15
-                        USD al día.</p>
+                    <p>Principales agencias de renta de autos disponibles en el aeropuerto.
+                        Estacionamiento disponible en el hotel.
+                    </p>
                 </div>
             </div>
 
@@ -366,17 +379,7 @@
                 <h4>Otras Opciones Cercanas:</h4>
                 <div class="hotel-list">
                     <div class="hotel-card">
-                        <h5>Hyatt Ziva Cancún</h5>
-                        <div class="hotel-distance">A 0.5 km del lugar</div>
-                        <p>Resort de lujo con todo incluido</p>
-                    </div>
-                    <div class="hotel-card">
-                        <h5>Marriott Cancún Resort</h5>
-                        <div class="hotel-distance">A 0.8 km del lugar</div>
-                        <p>Frente a la playa con spa</p>
-                    </div>
-                    <div class="hotel-card">
-                        <h5>Opciones en Airbnb</h5>
+                        <h5>Airbnb o Vrbo</h5>
                         <div class="hotel-distance">Varias ubicaciones</div>
                         <p>Muchos departamentos disponibles en la Zona Hotelera</p>
                     </div>
