Update some details Fixes #21

--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
             <div class="pair-left text-backdrop">
                 <div class="lang-en">
                     <!-- <div class="rounded"> -->
-                    <h2>Ceremony &amp; Accommodations</h2>
+                    <h2>Ceremony</h2>
                     <h3>Jardin del Mar</h3>
                     <p>Blvd. Kukulcan Km 13.5, Zona Hotelera<br />Cancún, Quintana Roo 77500, Mexico</p>
                     <a class="map-link" href="https://www.jardindelmar.com.mx/locación?lang=en" target="_blank">Visit
@@ -242,7 +242,7 @@
                     <!-- </div> -->
                 </div>
                 <div class="lang-es hidden"> <!-- Spanish version of location section -->
-                    <h2>Ceremonia y Hospedaje</h2>
+                    <h2>Ceremonia</h2>
                     <h3>Jardín del Mar</h3>
                     <p>Blvd. Kukulcán Km 13.5, Zona Hotelera<br />Cancún, Quintana Roo 77500, México</p>
                     <a class="map-link" href="https://www.jardindelmar.com.mx/locación?lang=es" target="_blank">Visita
@@ -286,14 +286,15 @@
                         🏨 We’ll be staying at Emporio Cancún — our home base for the weekend!
                         🚐 Transportation to the wedding and
                         🍹 our Thursday icebreaker will happen here.
-                        You’re free to stay elsewhere, but we recommend Emporio for the full experience.
+                        <strong>You’re free to stay elsewhere, but we recommend Emporio for the full
+                            experience.</strong>
                     </p>
                     <p class="lang-es hidden">
                         🏨 Estaremos en Emporio Cancún — ¡nuestro punto de reunión para todo el fin de semana!
                         🚐 De aquí saldrá el transporte a la boda y
                         🍹 también será la sede del rompehielo el jueves.
-                        Puedes quedarte en otro lugar, pero te recomendamos Emporio para vivir la experiencia
-                        completa.
+                        <strong>Puedes quedarte en otro lugar, pero te recomendamos Emporio para vivir la experiencia
+                            completa.</strong>
                     </p>
                     <p>Room block code: LUCAS-BEATRIZ</p>
                 </div>
